# wave-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  launch.sh  pyproject.toml  test_wave_server.py  wave_server.py
.claude/: settings.json
.claude/hooks/: wave-auto-approve.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
wave_mcp/: __init__.py  client.py  constants.py  formatters.py  models.py  rate_limiter.py  server.py  tools.py  validators.py
