[project]
name = "wave-mcp"
version = "1.0.0"
description = "MCP server for Wave call recording and transcription API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["wave_server.py"]
